I was able to append specific weather to each destination with coordinate method

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
     <link rel="stylesheet" href="main.css"></linkrel>
 
 </head>
-<body>
+<header>
     <h1> Top Tourist Destinations </h1>
+</header>
+<body>
+    
 <div>
     <table style="width: 100%;" >
         <thead align="left">
@@ -24,6 +27,9 @@
         <tbody align="left">
         <tr>
         <td><button id="btn1"><strong>London</strong></button>
+            <div>
+                
+            </div>
             <br>
             <div id="london" style="display: none;">
          <p>London is a world unto itself. The eclectic neighborhoods, <br>
